# sem3

./: .gitignore
cvm/lab1/: lab1.ms14
cvm/lab2/: k155inz.ms14  odnosum.ms14  polusum.ms14
cvm/lab3/: lab3.ms14
diskra/courseWork/: CMakeLists.txt  Makefile
diskra/courseWork/include/: BigArithmeticCalc.hpp  SmallArithmetic.hpp  UI.hpp  calc.hpp  config.hpp
diskra/courseWork/report/: base.tex  intro.tex  literature.tex  main.tex  operators.tex  result.tex  settings.tex  task1.tex  tasks.tex  tests.tex  title.tex
diskra/courseWork/src/: BigArithmeticCalc.cpp  SmallArithmetic.cpp  UI.cpp  calc.cpp  main.cpp
diskra/dmcs/: CMakeLists.txt
diskra/dmcs/include/: BigFiniteNumber.h  arithmetic.h  constants.h  utils.h
diskra/dmcs/src/: BigFiniteNumber.cpp  arithmetic.cpp  constants.cpp  main.cpp  utils.cpp
diskra/include/: Gray.hpp  Input.hpp  Multiset.hpp
diskra/lab1/: Makefile
diskra/lab1/include/: Gray.hpp  Multiset.hpp  UI.hpp
diskra/lab1/src/: Gray.cpp  Multiset.cpp  UI.cpp  main.cpp
diskra/lab1_test/: Makefile
diskra/lab1_test/src/: Input.cpp
diskra/lab2/: CMakeLists.txt  quest.md
diskra/lab2/include/: bdd.h  config.h  help.h  ui.h  zheg.h
diskra/lab2/src/: main.cpp
diskra/src/: Gray.cpp  Multiset.cpp  main.cpp
math/latex/: .gitignore  main.aux  main.out  main.tex  main.toc  settings.tex
math/latex/quest/: 1.aux  1.tex  10.aux  10.tex  11.aux  11.tex  12.aux  12.tex  13.aux  13.tex  14.aux  14.tex  15.aux  15.tex  16.aux  16.tex  17.aux  17.tex  18.aux  18.tex  19.aux  2.aux  2.tex  20.aux  21.aux  21.tex  22.aux  22.tex  23.aux  23.tex  24.aux  24.tex  25.aux  25.tex  26.aux  26.tex  27.aux  27.tex  28.aux  28.tex  (+65 more)
oop/: .gitignore
oop/lab1/: Makefile  lab1.cpp
oop/lab2/: .gitignore  Lab2.cpp  Makefile  MyString.cpp  MyVector.cpp  stdafx.h
oop/lab2/src/: Circle.cpp  MyString.cpp  MyVector.cpp  Rect.cpp  Shape.cpp  main.cpp
oop/lab2/src/headers/: Circle.h  MyString.h  MyVector.h  Rect.h  Shape.h  stdafx.h
oop/lab3/: Makefile  lab3.cpp
oop/lab3/src/: main.cpp
oop/lab3/src/headers/: MyStack.h  func.h  stdafx.h
oop/lab3/src/tpl/: MyStack.tpp  func.tpp
oop/lab4/: Makefile  lab4.cpp
oop/lab4/src/: lab4.cpp  main.cpp
oop/lab4/src/headers/: Point.h  func.h
oop/lab4/src/tpl/: func.tpp
oop/lab5/: CmakeLists.txt  quest.md
oop/lab5/src/: main.cpp
oop/lab5/src/headers/: mainwindow.h
oop/lab6/: CmakeLists.txt  quest.md
oop/lab6/src/: main.cpp  mainwindow.cpp
oop/lab6/src/headers/: mainwindow.h
oop/lab7/: quest.md
oop/lab7/lab7.1/: CMakeLists.txt  quest.md
oop/lab7/lab7.1/src/: ellipse.cpp  main.cpp  mainwindow.cpp  rectangle.cpp  triangle.cpp
oop/lab7/lab7.1/src/headers/: ellipse.h  mainwindow.h  rectangle.h  triangle.h
oop/lab7/lab7.2/: CMakeLists.txt  quest.md
oop/lab7/lab7.2/src/: main.cpp  mainwindow.cpp
oop/lab7/lab7.2/src/headers/: ellipse.h  mainwindow.h  rectangle.h  star.h  triangle.h
oop/lab8/: CMakeLists.txt  quest.md
oop/lab8/report/: abstract.aux  appendix.aux  appendix.tex  conclusion.aux  conclusion.tex  discription.aux  discription.tex  implementation.tex  introduction.aux  introduction.tex  main.aux  main.out  main.tex  main.toc  settings.tex  tasks.aux  tasks.tex  testing.tex  title.aux  title.tex
oop/lab8/src/: contact.cpp  contactstorage.cpp  contactvalidator.cpp  main.cpp  mainwindow.cpp
oop/lab8/src/headers/: contact.h  contactstorage.h  contactvalidator.h  mainwindow.h
oop/lab9/: quest.md
